contenu html + mise en grille css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.csss">
+    <link rel="stylesheet" href="index.css">
     <title>My CV</title>
 </head>
 <body>
-    
+    <div class="container">
+
+        <div class="item item-1"> 
+            <p class="sub-item"> Makraï Lamarti Yassin <br> Avenue Félix Marchal 26, 1030 Schaerbeek <br> Née le 21/06/1992 à Bruxelles <br> Nationalité: Belge <br> Email: makrai.yassin@gmail.com <br> GSM: 0486 11 36 97 </p>
+        </div>
+
+        <div class="item item-2"> 
+            <p class="sub-item"> A propos de moi: <br> Je suis quelqu'un de pragmatique et d'organisé. J'aime travailler en équipe et le fait de travailler seul ne me dérange pas non plus. Je suis ponctuel, volontaire, flexible et j'ai le sens des responsabilités. Je suis également motivé et je resiste assez bien au stress.</p>
+        </div>
+
+        <div class="item item-3"> 
+            <p class="sub-item"> Expériences professionnelles: <br> Technitien de surface <br> Facteur chez Bpost <br> Chauffeur de bus Chez Keolis <br> Chauffeur de bus chez GEO</p>
+        </div>
+
+        <div class="item item-3"> 
+            <p class="sub-item"> Formation: <br> C.E.S.S obtenu à l'A.R.A.T en Technique de qualification - Animation <br> Certificat de gestion obtenu à l'A.R.A.T <br> Formation de chauffeur de bus effectuée avec Bruxelles Formation </p>
+        </div>
+
+        <div class="item item-3"> 
+            <p class="sub-item"> Formation en cours: <br> Web developer avec Becode </p>
+        </div>
+
+        <div class="item item-3"> 
+            <p class="sub-item"> Projets et réalisations: <br> https://github.com/Makraiyassin </p>
+        </div>
+
+    </div>
 </body>
 </html>
