changement de police

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <title>My CV</title>
 </head>
 <body>
@@ -11,27 +12,27 @@
 
         <div class="item1"> 
             <img src="https://avatars3.githubusercontent.com/u/70712131?s=460&u=091d84e94c5465e3f9f9a242d1b8b6b3e3cbcb12&v=4" alt="Me">
-            <p class="sub-item"> Makraï Lamarti Yassin <br> Avenue Félix Marchal 26, 1030 Schaerbeek <br> Née le 21/06/1992 à Bruxelles <br> Nationalité: Belge <br> Email: makrai.yassin@gmail.com <br> GSM: 0486 11 36 97 </p>
+            <p class="sub-item"> <span>Makraï Lamarti Yassin</span> <br><br> Avenue Félix Marchal 26, 1030 Schaerbeek <br><br> Née le 21/06/1992 à Bruxelles <br> Nationalité: Belge <br><br> <span>Email:</span> makrai.yassin@gmail.com <br> <span>GSM:</span> 0486 11 36 97 </p>
         </div>
 
         <div class="item2"> 
-            <p class="sub-item"> A propos de moi: <br> Je suis quelqu'un de pragmatique et d'organisé. J'aime travailler en équipe et le fait de travailler seul ne me dérange pas non plus. Je suis ponctuel, volontaire, flexible et j'ai le sens des responsabilités. Je suis également motivé et je resiste assez bien au stress.</p>
+            <p class="sub-item"> <span>A propos de moi:</span> <br><br> Je suis quelqu'un de pragmatique et d'organisé. J'aime travailler en équipe et le fait de travailler seul ne me dérange pas non plus. Je suis ponctuel, volontaire, flexible et j'ai le sens des responsabilités. Je suis également motivé et je resiste assez bien au stress.</p>
         </div>
 
         <div class="item3"> 
-            <p class="sub-item"> Expériences professionnelles: <br> Technitien de surface <br> Facteur chez Bpost <br> Chauffeur de bus Chez Keolis <br> Chauffeur de bus chez GEO</p>
+            <p class="sub-item">  <span>Expériences professionnelles:</span> <br><br> Technitien de surface <br> Facteur chez Bpost <br> Chauffeur de bus Chez Keolis <br> Chauffeur de bus chez GEO</p>
         </div>
 
         <div class="item4"> 
-            <p class="sub-item"> Formation: <br> C.E.S.S obtenu à l'A.R.A.T en Technique de qualification - Animation <br> Certificat de gestion obtenu à l'A.R.A.T <br> Formation de chauffeur de bus effectuée avec Bruxelles Formation </p>
+            <p class="sub-item">  <span>Formation:</span> <br><br> C.E.S.S obtenu à l'A.R.A.T en Technique de qualification - Animation <br> Certificat de gestion obtenu à l'A.R.A.T <br> Formation de chauffeur de bus effectuée avec B.F</p>
         </div>
 
         <div class="item5"> 
-            <p class="sub-item"> Formation en cours: <br> Web developer avec Becode </p>
+            <p class="sub-item">  <span>Formation en cours:</span> <br><br> Web developer avec Becode </p>
         </div>
 
         <div class="item6"> 
-            <p class="sub-item"> Projets et réalisations: <br> https://github.com/Makraiyassin </p>
+            <p class="sub-item">  <span>Projets et réalisations:</span> <br><br> https://github.com/Makraiyassin </p>
         </div>
 
     </div>
