--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>My CV</title>
 </head>
 <body>
-    <div class="container">
+    <!--
+    <div class="navbar">
+        <ul>
+            <li><a href="https://makraiyassin.github.io/Tribute-2/Ounayssa.html" target="_blank">Projet tribute</a></li>
+            <li><a href="https://makraiyassin.github.io/tim-berners-lee/" target="_blank">Projet Tim Berners-lee</a></li>
+            <li><a href="https://makraiyassin.github.io/markdown-warmup-html/" target="_blank">Projet markdown warmup html</a></li>
+            <li><a href="https://makraiyassin.github.io/markdown-challenge/" target="_blank">Projet markdown chalenge</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+    -->
+    <div class="container">     
 
         <div class="item1"> 
             <img src="https://avatars3.githubusercontent.com/u/70712131?s=460&u=091d84e94c5465e3f9f9a242d1b8b6b3e3cbcb12&v=4" alt="Me">
