add contact form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="https://makraiyassin.github.io/tim-berners-lee/" target="_blank">Projet Tim Berners-lee</a></li>
                 <li><a href="https://makraiyassin.github.io/markdown-warmup-html/" target="_blank">Projet markdown warmup html</a></li>
                 <li><a href="https://makraiyassin.github.io/markdown-challenge/" target="_blank">Projet markdown chalenge</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         
