--- a/contact.html
+++ b/contact.html
@@ -21,23 +21,26 @@
 
         <form action="#">
       
-          <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name...">
+          <label for="fname">Nom</label>
+          <input type="text" id="fname" name="firstname" placeholder="Ton nom...">
             <br>
-          <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name...">
+          <label for="lname">Prénom</label>
+          <input type="text" id="lname" name="lastname" placeholder="Ton prénom...">
             <br>
-          <label for="country">Country</label>
+          <label for="country">Pays</label>
           <select id="country" name="country">
+            <option value="Allemagne">Allemagne</option>
+            <option value="Angletere">Angleterre</option>
             <option value="Belgique">Belgique</option>
             <option value="France">France</option>
-            <option value="Angletere">Angletere</option>
+            <option value="Luxembourg">Luxembourg</option>
+            <option value="Pays-Bas">Pays-Bas</option>
           </select>
             <br>
-          <label for="subject">Subject</label>
-          <textarea id="subject" name="subject" placeholder="Write something..." style="height:200px"></textarea>
+          <label for="subject">Sujet</label>
+          <textarea id="subject" name="subject" placeholder="..." style="height:200px"></textarea>
             <br>
-          <input id="submit" type="submit" value="Submit">
+          <input id="submit" type="submit" value="Envoyer">
       
         </form>
       </div>
