--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="contact.css">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
@@ -22,10 +25,10 @@
         <form action="#">
       
           <label for="fname">Nom</label>
-          <input type="text" id="fname" name="firstname" placeholder="Ton nom...">
+          <input type="text" id="fname" name="firstname" placeholder="Votre nom...">
             <br>
           <label for="lname">Prénom</label>
-          <input type="text" id="lname" name="lastname" placeholder="Ton prénom...">
+          <input type="text" id="lname" name="lastname" placeholder="Votre prénom...">
             <br>
           <label for="country">Pays</label>
           <select id="country" name="country">
@@ -36,9 +39,8 @@
             <option value="Luxembourg">Luxembourg</option>
             <option value="Pays-Bas">Pays-Bas</option>
           </select>
-            <br>
-          <label for="subject">Sujet</label>
-          <textarea id="subject" name="subject" placeholder="..." style="height:200px"></textarea>
+          <br>
+          <textarea id="subject" name="subject" placeholder="Votre message..." style="height:200px"></textarea>
             <br>
           <input id="submit" type="submit" value="Envoyer">
       
