--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="nav">
             <ul>
                 <li><a href="https://makraiyassin.github.io/Tribute-2/Ounayssa.html" target="_blank">Projet tribute</a></li>
-                <li><a href="https://makraiyassin.github.io/challenge-bootstrap/exercice-1" target="_blank">Projet Tim Bootstrap</a></li>
+                <li><a href="https://makraiyassin.github.io/challenge-bootstrap/exercice-1" target="_blank">Projet Bootstrap</a></li>
                 <li><a href="https://makraiyassin.github.io/tim-berners-lee/" target="_blank">Projet Tim Berners-lee</a></li>
                 <li><a href="https://makraiyassin.github.io/markdown-warmup-html/" target="_blank">Projet markdown warmup html</a></li>
                 <li><a href="https://makraiyassin.github.io/markdown-challenge/" target="_blank">Projet markdown chalenge</a></li>
